--- a/projects/deocclusion/index.html
+++ b/projects/deocclusion/index.html
@@ -52,7 +52,10 @@
 	  <sup>2</sup>Nanyang Technological University
 	</div>
 
-	<div class="venue">Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR</a>) 2020</div>
+	<div class="venue">Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (<a href="http://cvpr2020.thecvf.com/" target="_blank">CVPR</a>) 2020<br>
+	<font color="red"><strong>(Oral Presentation)</strong></font><br />
+	</div>
+	
       </div>
 
       
