--- a/index.html
+++ b/index.html
@@ -285,6 +285,22 @@
 
             <div> <strong>2023</strong><br />
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/humangaussian-arxiv.png" title="humangaussian" />
+                    <div> <strong>HumanGaussian: Text-Driven 3D Human Generation with Gaussian Splatting</strong><br />
+                        <br>
+                        Xian Liu, <strong>Xiaohang Zhan</strong>, Jiaxiang Tang, Ying Shan, Gang Zeng, Dahua Lin, Xihui Liu, Ziwei Liu
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2311.17061'>[Paper]</a>
+                        <a href='https://alvinliu0.github.io/projects/HumanGaussian'>[Project Page]</a>
+                        <a href='https://github.com/alvinliu0/HumanGaussian'>[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=S3djzHoqPKY'>[Demo]</a>
+                        
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
                     <div> <strong>SemanticBoost: Elevating Motion Generation with Augmented Textual Cues</strong><br />
                         <br>
