--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
                     <font color="gray">March 2023 - Now. <br />
-                        <strong>Title</strong>: Senior research scientist.<br />
+                        <strong>Title</strong>: Group leader, Senior research scientist.<br />
                         <strong>Experience</strong>: Research in computer graphics, character animation, 3D content generation and technology productization in Game/XR industry.<br />
                     </font>
                     <font color="red">Recruiting full-time employees and interns!</font><br />
@@ -225,7 +225,7 @@
                 <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
                     <br>
                     <font color="gray">August 2020 - March 2023. <br />
-                        <strong>Title</strong>: Principal Engineer, Huawei Genius Youth Program, Huawei assistant scientist.<br />
+                        <strong>Title</strong>: Group leader, Principal engineer, Huawei Genius Youth Program, Huawei assistant scientist.<br />
                         <strong>Experience</strong>: Research and productization of digital human technologies, including parametric modeling, auto rigging, body & face motion capture & synthesis.<br />
                         
                     </font>
@@ -285,10 +285,12 @@
     <div class="section">
         <h2 id="confpapers">Projects</h2>
 
+        <div> <strong>2022</strong><br />
+
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
-            <div> <strong>HMS Auto-Rigging Solution for Biped Characters </strong><br />
+            <div> <strong>HMS Auto-Rigging Solution for Biped Characters @Huawei</strong><br />
                 <br>
-                Duty: project leader.<br />
+                Duty: project leader, first author.<br />
                 Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, the first auto-rigging service on mobile terminals.<br />
                 Productization: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core.</a><br />
                 Publicity: <a href="https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892">Huawei Developer Conference 2022 (start from 1:01:00)</a>,
@@ -298,6 +300,7 @@
             </div>
             <div class="spanner"></div>
         </div>
+
 
         </div>
     </div>
