--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <br>
                     <font color="gray">August 2012 - July 2016. Bachelor.</font>
                     <br>
-                    <font color="gray">With "Outstanding Graduate Award" (top 1%).</font>
+                    <font color="gray">With "Outstanding Undergraduates Award" (top 1%).</font>
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -709,8 +709,8 @@
                 <li>Huawei Genius Youth Program, 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
-                <li>Outstanding Graduate of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
-                <li>Outstanding Graduate of Beijing, 2016</li>
+                <li>Outstanding Undergraduates Award of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
+                <li>Outstanding Undergraduates Award of Beijing, 2016</li>
                 <li>National Scholarship, 2014, Ministry of Education of China</li>
                 <li>Technological Innovation Scholarship, 2014, 2015, Tsinghua University</li>
                 <li>First class Academic Scholarship, 2013, 2014, Tsinghua University</li>
