--- a/index.html
+++ b/index.html
@@ -286,21 +286,27 @@
         <h2 id="confpapers">Projects</h2>
 
         <div> <strong>2022</strong><br />
-
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
             <div> <strong>HMS Auto-Rigging Solution for Biped Characters @Huawei</strong><br />
                 <br>
-                Duty: project leader, first author.<br />
+                My duty: project leader, first author.<br />
                 Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, the first auto-rigging service on mobile terminals.<br />
-                Productization: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core.</a><br />
+                Productization: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
                 Publicity: <a href="https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892">Huawei Developer Conference 2022 (start from 1:01:00)</a>,
                            <a href="https://www.bilibili.com/video/BV1vP411L7ga/?vd_source=c0d0c6d3dd06dd38049f3b95ada3e3d3">Bilibili</a>. <br />
-                
-                
             </div>
             <div class="spanner"></div>
         </div>
 
+        <div> <strong>2021</strong><br />
+        <div class="paper" id="arxiv"><img class="paper" src="images/mmselfsup.png" title="mmselfsup" />
+            <div> <strong>MMSelfSup: An open source self-supervised representation learning toolbox @OpenMMLab</strong><br />
+                <br>
+                My duty: first author.<br />
+                Project page: <a href="https://github.com/open-mmlab/mmselfsup">mmselfsup</a>
+            </div>
+            <div class="spanner"></div>
+        </div>
 
         </div>
     </div>
@@ -663,7 +669,6 @@
         <div class="section">
             <h2 id="confpapers">Professional activities</h2>
             <div class="paper">
-                <li>The major developer of OpenSelfSup, an open-source self-supervised learning toolbox (Now <a href='https://github.com/open-mmlab/mmselfsup'>mmselfsup</a>).</li>
                 <li>Reviewer of T-PAMI, IJCV, CVPR, ICCV, ECCV, AAAI, BMVC, NeurIPS.</li>
                 <li><a href='https://xingangpan.github.io/projects/CULane.html'>CULane Dataset</a>: a large-scale challenging dataset for traffic lane detection.
                 <ul>
