--- a/index.html
+++ b/index.html
@@ -316,24 +316,48 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
-            <div> <strong>2023</strong><br />
+            <div> <strong>2024</strong><br />
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/humangaussian-arxiv.png" title="humangaussian" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-progmogen.png" title="progmogen" />
+                    <div> <strong>Programmable Motion Generation for Open-Set Motion Control Tasks</strong><br />
+                        <br>
+                        Hanchao Liu, <strong>Xiaohang Zhan</strong>, Shaoli Huang, Tai-Jiang Mu, Ying Shan
+                        <br>
+                        <em>CVPR 2024</em><br />
+                        <br>
+
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-humangaussian.png" title="humangaussian" />
                     <div> <strong>HumanGaussian: Text-Driven 3D Human Generation with Gaussian Splatting</strong><br />
                         <br>
                         Xian Liu, <strong>Xiaohang Zhan</strong>, Jiaxiang Tang, Ying Shan, Gang Zeng, Dahua Lin, Xihui Liu, Ziwei Liu
                         <br>
-                        <em>arXiv preprint</em><br />
+                        <em>CVPR 2024</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2311.17061'>[Paper]</a>
                         <a href='https://alvinliu0.github.io/projects/HumanGaussian'>[Project Page]</a>
                         <a href='https://github.com/alvinliu0/HumanGaussian'>[Code]</a>
                         <a href='https://www.youtube.com/watch?v=S3djzHoqPKY'>[Demo]</a>
-                        
                     </div>
                     <div class="spanner"></div>
                 </div>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/tapmo-arxiv.png" title="tapmo" />
+                    <div> <strong>TapMo: Shape-aware Motion Generation of Skeleton-free Characters</strong><br />
+                        <br>
+                        Jiaxu Zhang, Shaoli Huang, Zhigang Tu, Xin Chen, <strong>Xiaohang Zhan</strong>, Gang Yu, Ying Shan
+                        <br>
+                        <em>ICLR 2024</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2310.12678'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+            <div> <strong>2023</strong><br />
                 <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
                     <div> <strong>SemanticBoost: Elevating Motion Generation with Augmented Textual Cues</strong><br />
                         <br>
@@ -346,18 +370,6 @@
                         <a href='https://github.com/blackgold3/SemanticBoost'>[Code]</a>
                         <a href='https://discord.gg/rrayYqZ4tf'>[Discord]</a>
                         <!-- <a href='https://huggingface.co/spaces/Kleinhe/SemanticBoost'>[HuggingFace]</a> -->
-                    </div>
-                    <div class="spanner"></div>
-                </div>
-
-                <div class="paper" id="arxiv"><img class="paper" src="images/tapmo-arxiv.png" title="tapmo" />
-                    <div> <strong>TapMo: Shape-aware Motion Generation of Skeleton-free Characters</strong><br />
-                        <br>
-                        Jiaxu Zhang, Shaoli Huang, Zhigang Tu, Xin Chen, <strong>Xiaohang Zhan</strong>, Gang Yu, Ying Shan
-                        <br>
-                        <em>arXiv preprint</em><br />
-                        <br>
-                        <a href='https://arxiv.org/abs/2310.12678'>[Paper]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
