--- a/index.html
+++ b/index.html
@@ -196,12 +196,20 @@
 
     <div style="clear: both;">
         <div class="section">
-            <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
+            <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>) (<a href='https://www.linkedin.com/in/xiaohang-zhan%EF%BC%88%E8%A9%B9%E6%99%93%E8%88%AA%EF%BC%89-7659b2b8/?originalSubdomain=cn'>LinkedIn</a>)</h2>
             <div class="paper">
-                I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
-                Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
+                <!-- I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. -->
+                <!-- Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016. -->
+
+                Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent from 2023. 
+                Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
+                Afterwards, he joined Huawei via <a href="https://career.huawei.com/reccampportal/portal5/topminds.html">Huawei Genius Youth Program</a> (2020). 
+                His research interests include unsupervised learning from 2016, and AI+CG from 2020. 
+                He is the reviewer of most top conferences and journals in AI&CV. 
+                He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
+                Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project.
                 <br>
-                My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020.
+                <!-- My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020. -->
             </div>
         </div>
     </div>
@@ -216,7 +224,7 @@
                         <strong>Title</strong>: Group leader, Senior research scientist.<br />
                         <strong>Experience</strong>: Research in computer graphics, character animation, 3D content generation and technology productization in Game/XR industry.<br />
                     </font>
-                    <font color="red">Recruiting full-time employees and interns!</font><br />
+                    <font color="red">Recruiting interns! Feel free to drop me an email.</font><br />
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -318,6 +326,19 @@
 
             <div> <strong>2024</strong><br />
 
+                <!-- <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-headevolver-s.png" title="headevolver" />
+                    <div> <strong>HeadEvolver: Text to Head Avatars via Locally Learnable Mesh Deformation</strong><br />
+                        <br>
+                        Duotun Wang*, Hengyu Meng*, Zeyu Cai*, Zhijing Shao, Qianxi Liu, Lin Wang, Mingming Fan, Ying Shan, <strong>Xiaohang Zhan</strong>, Zeyu Wang
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://www.duotun-wang.co.uk/HeadEvolver/'>[Project Page]</a>
+                        <br>
+                    </div>
+                    <div class="spanner"></div>
+                </div> -->
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-progmogen.png" title="progmogen" />
                     <div> <strong>Programmable Motion Generation for Open-Set Motion Control Tasks</strong><br />
                         <br>
@@ -325,7 +346,6 @@
                         <br>
                         <em>CVPR 2024</em><br />
                         <br>
-
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -358,7 +378,7 @@
                 </div>
 
             <div> <strong>2023</strong><br />
-                <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
+                <!-- <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
                     <div> <strong>SemanticBoost: Elevating Motion Generation with Augmented Textual Cues</strong><br />
                         <br>
                         Xin He, Shaoli Huang, <strong>Xiaohang Zhan</strong>, Chao Weng, Ying Shan
@@ -369,10 +389,9 @@
                         <a href='https://blackgold3.github.io/SemanticBoost/'>[Project Page]</a>
                         <a href='https://github.com/blackgold3/SemanticBoost'>[Code]</a>
                         <a href='https://discord.gg/rrayYqZ4tf'>[Discord]</a>
-                        <!-- <a href='https://huggingface.co/spaces/Kleinhe/SemanticBoost'>[HuggingFace]</a> -->
                     </div>
                     <div class="spanner"></div>
-                </div>
+                </div> -->
 
                 <div class="paper" id="cvpr23"><img class="paper" src="images/rabit-cvpr23.png" title="rabit" />
                     <div> <strong>RaBit: Parametric Modeling of 3D Biped Cartoon Characters with a Topological-consistent Dataset</strong><br />
