--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
                     <br>
                     <font color="gray">August 2020 - March 2023. <br />
-                        <strong>Title</strong>: Group leader, Principal engineer, Huawei Genius Youth Program, Huawei assistant scientist.<br />
+                        <strong>Title</strong>: Project leader, Huawei Genius Youth, Huawei assistant scientist.<br />
                         <strong>Experience</strong>: Research and productization of digital human technologies, including parametric modeling, auto rigging, body & face motion capture & synthesis.<br />
                         
                     </font>
