--- a/index.html
+++ b/index.html
@@ -324,21 +324,24 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
-            <div> <strong>2024</strong><br />
+            <div> <strong>Preprints</strong><br />
 
-                <!-- <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-headevolver-s.png" title="headevolver" />
+                <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-headevolver-s.png" title="headevolver" />
                     <div> <strong>HeadEvolver: Text to Head Avatars via Locally Learnable Mesh Deformation</strong><br />
                         <br>
                         Duotun Wang*, Hengyu Meng*, Zeyu Cai*, Zhijing Shao, Qianxi Liu, Lin Wang, Mingming Fan, Ying Shan, <strong>Xiaohang Zhan</strong>, Zeyu Wang
                         <br>
                         <em>arXiv preprint</em><br />
                         <br>
+                        <a href="https://arxiv.org/abs/2403.09326">[Paper]</a>
                         <a href='https://www.duotun-wang.co.uk/HeadEvolver/'>[Project Page]</a>
+                        
                         <br>
                     </div>
                     <div class="spanner"></div>
-                </div> -->
+                </div>
 
+                <div> <strong>2024</strong><br />
                 <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-progmogen.png" title="progmogen" />
                     <div> <strong>Programmable Motion Generation for Open-Set Motion Control Tasks</strong><br />
                         <br>
