--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
                         <br>
                         <em>CVPR 2024 (<font color="orange"><strong>Highlight</strong></font>, 11.9% of accepted papers)</em><br />
                         <br>
+                        <a href='https://arxiv.org/abs/2405.19283'>[Paper]</a>
+                        <a href='https://hanchaoliu.github.io/Prog-MoGen/'>[Project Page]</a>
+                        <a href=''>[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=JpaoFB3ehgc'>[Demo]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
