--- a/index.html
+++ b/index.html
@@ -292,23 +292,25 @@
     <div class="section">
         <h2 id="confpapers">Productized Projects</h2>
 
-        <!-- <div class="paper" id="arxiv"><img class="paper" src="images/tencent-s2f.png" title="tencent-s2f" />
+        <div class="paper" id="arxiv"><img class="paper" src="images/tencent-s2f.png" title="tencent-s2f" />
             <div> <strong>Audio-Driven 3D Face Animation Solution @Tencent 2023-now</strong><br />
                 <br>
                 My duty: team leader.<br />
-                Achievements: surpassing NVIDIA Omniverse Audio2Face in lip-sync accuracy and naturalness in large-scale user study; real-time capable for online applications.<br />
-                Productization: cutscenes animation production, short promotional videos production, AI NPCs for Honor of Kings, Game for Peace, etc.<br />
+                Achievements: real-time high-quality audio-driven 3D face animation algorithm based on MetaHuman rigs, surpassing NVIDIA Omniverse Audio2Face in lip-sync accuracy and naturalness by far in large-scale user study.<br />
+                Productization: LLM-based conversational digital human, cutscenes animation production, short promotional videos production, AI NPCs in game projects.
+                Related products: Honor of Kings (王者荣耀), Game for Peace (和平精英), etc.<br />
+                Publicity: <a href="https://gp.qq.com/gicp/news/684/18444655.html">Game for Peace news</a>
             </div>
             <div class="spanner"></div>
-        </div> -->
+        </div>
 
-        * Projects in Tencent are undisclosed.
+        <!-- * Projects in Tencent are undisclosed. -->
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
             <div> <strong>HMS Auto-Rigging Solution for Biped Characters @Huawei 2021-2022</strong><br />
                 <br>
-                My duty: project leader, first author.<br />
-                Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, the first auto-rigging service on mobile terminals.<br />
-                Productization: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
+                My duty: major algorithm contributor, project leader.<br />
+                Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, surpassing Mixamo and other academic work.<br />
+                Related products: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
                 Publicity: <a href="https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892">Huawei Developer Conference 2022 (start from 1:01:00)</a>,
                            <a href="https://www.bilibili.com/video/BV1vP411L7ga/?vd_source=c0d0c6d3dd06dd38049f3b95ada3e3d3">Bilibili</a>. <br />
             </div>
@@ -320,7 +322,8 @@
                 <br>
                 My duty: first author.<br />
                 Achievements: MMSelfSup is a widely-used open-source self-supervised representation learning toolbox based on PyTorch. Github stars: ~3.1k.<br />
-                Project page: <a href="https://github.com/open-mmlab/mmselfsup">mmselfsup</a>
+                Project page: <a href="https://github.com/open-mmlab/mmselfsup">mmselfsup</a><br />
+                Related products: OpenMMLab platform
             </div>
             <div class="spanner"></div>
         </div>
@@ -342,8 +345,8 @@
                         <br>
                         <a href='https://arxiv.org/abs/2405.19283'>[Paper]</a>
                         <a href='https://hanchaoliu.github.io/Prog-MoGen/'>[Project Page]</a>
-                        <a href=''>[Code]</a>
-                        <a href='https://www.youtube.com/watch?v=JpaoFB3ehgc'>[Demo]</a>
+                        <a href='https://github.com/HanchaoLiu/ProgMoGen'>[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=Y59EGigPiL8'>[Demo]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
