--- a/index.html
+++ b/index.html
@@ -200,47 +200,16 @@
             <div class="paper">
                 <!-- I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. -->
                 <!-- Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016. -->
-
-                Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent from 2023. 
+                Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent. 
                 Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
                 Afterwards, he joined Huawei via <a href="https://career.huawei.com/reccampportal/portal5/topminds.html">Huawei Genius Youth Program</a> (2020). 
-                His research interests include unsupervised learning from 2016, and AI+CG from 2020. 
+                His research interests include representation learning from 2016, and content generation from 2020. 
                 He is the reviewer of most top conferences and journals in AI&CV. 
                 He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
                 Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project.
-                <br>
+                
                 <!-- My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020. -->
             </div>
-        </div>
-    </div>
-
-    <div style="clear: both;">
-        <div class="section">
-            <h2 id="work">Experience</h2>
-            <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon.png" title="tencent" />
-                <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
-                    <br>
-                    <font color="gray">March 2023 - Now. <br />
-                        <strong>Title</strong>: Group leader, Senior research scientist.<br />
-                        <strong>Experience</strong>: Research in character-centric image/video generation, 3D model generation, animation, and technology productization in Game/XR/Cloud industry.<br />
-                    </font>
-                    <font color="red">Recruiting full-time employee and interns, particularly in character-centric video generation! Feel free to drop me an email.</font><br />
-                </div>
-                <div class="spanner"></div>
-            </div>
-
-            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
-                <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
-                    <br>
-                    <font color="gray">August 2020 - March 2023. <br />
-                        <strong>Title</strong>: Project leader, Huawei Genius Youth, Huawei assistant scientist.<br />
-                        <strong>Experience</strong>: Research and productization of digital human technologies, including parametric modeling, auto rigging, body & face motion capture & synthesis.<br />
-                    </font>
-                    <br>
-                </div>
-                <div class="spanner"></div>
-            </div>
-
         </div>
     </div>
 
@@ -253,6 +222,8 @@
                     <font color="gray">August 2017 - August 2020 (1 year shortened). Ph.D. in Information Engineering.</font>
                     <br>
                     <font color="gray">August 2016 - August 2017. Research assistant.</font>
+                    <br>
+                    <font color="gray">With “Top 100 Chinese Rising Stars in Artificial Intelligence”.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -267,6 +238,60 @@
             </div>
         </div>
     </div>
+
+    <div style="clear: both;">
+        <div class="section">
+            <h2 id="work">Professional Experience</h2>
+            <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon.png" title="tencent" />
+                <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
+                    <br>
+                    <font color="gray">March 2023 - Now. <br />
+                        Senior Research Scientist, Tech Leader.<br />
+                        Research in 2D/3D/4D contents generation, and technology transfer to products in game industry and
+                        social media.<br />
+                    </font>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
+            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
+                <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
+                    <br>
+                    <font color="gray">August 2020 - March 2023. <br />
+                        Huawei Assistant Scientist, Tech Leader.<br />
+                        Research in 3D avatars, including parametric modeling, bone rigging, motion synthesis, and technology transfer to Cloud products.<br />
+                    </font>
+                    <br>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
+            <div class="edu" id="sensetime"><img class="icon" src="icons/sensetime_icon.png" title="sensetime" />
+                <div> <font size="20"><strong>SenseTime</strong></font><br />
+                    <br>
+                    <font color="gray">Dec 2017 - April 2018, Mar 2016 - Oct 2016. <br />
+                        Research Intern.<br />
+                    </font>
+                    <br>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
+            <div class="edu" id="cuhk"><img class="icon" src="icons/cuhk_icon.png" title="cuhk" />
+                <div> <font size="20"><strong>Multimedia Laboratory, The Chinese University of Hong Kong</strong></font><br />
+                    <br>
+                    <font color="gray">Oct 2016 - Aug 2017, July 2015 - Sept 2015. <br />
+                        Junior Research Assistant.<br />
+                        Research on large-scale clustering and semi-supervised learning for face recognition. Research on lane detection for autonomous driving. 
+                    </font>
+                    <br>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
+        </div>
+    </div>
+
 
 
 
@@ -295,7 +320,6 @@
         <div class="paper" id="arxiv"><img class="paper" src="images/tencent-s2f.png" title="tencent-s2f" />
             <div> <strong>Audio-Driven 3D Face Animation Solution @Tencent 2023-now</strong><br />
                 <br>
-                My duty: team leader.<br />
                 Achievements: real-time high-quality audio-driven 3D face animation algorithm based on MetaHuman rigs, surpassing NVIDIA Omniverse Audio2Face in lip-sync accuracy and naturalness by far in large-scale user study.<br />
                 Productization: LLM-based conversational digital human, cutscenes animation production, short promotional videos production, AI NPCs in game projects.
                 Related products: Honor of Kings (王者荣耀), Game for Peace (和平精英), etc.<br />
@@ -308,7 +332,6 @@
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
             <div> <strong>HMS Auto-Rigging Solution for Biped Characters @Huawei 2021-2022</strong><br />
                 <br>
-                My duty: major algorithm contributor, project leader.<br />
                 Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, surpassing Mixamo and other academic work.<br />
                 Related products: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
                 Publicity: <a href="https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892">Huawei Developer Conference 2022 (start from 1:01:00)</a>,
@@ -320,7 +343,6 @@
         <div class="paper" id="arxiv"><img class="paper" src="images/mmselfsup.png" title="mmselfsup" />
             <div> <strong>MMSelfSup Open-source Project @MMLab 2020-2021</strong><br />
                 <br>
-                My duty: first author.<br />
                 Achievements: MMSelfSup is a widely-used open-source self-supervised representation learning toolbox based on PyTorch. Github stars: ~3.1k.<br />
                 Project page: <a href="https://github.com/open-mmlab/mmselfsup">mmselfsup</a><br />
                 Related products: OpenMMLab platform
@@ -714,15 +736,18 @@
         </div>
     </div>
 
+
     <div style="clear: both;">
         <div class="section">
-            <h2 id="confpapers">Professional activities</h2>
-            <div class="paper">
-                <li>Reviewer of T-PAMI, IJCV, CVPR, ICCV, ECCV, AAAI, BMVC, NeurIPS.</li>
-                <li><a href='https://xingangpan.github.io/projects/CULane.html'>CULane Dataset</a>: a large-scale challenging dataset for traffic lane detection.
-                <ul>
-                    <p><font size="5"></font></p>
-                </ul>
+            <h2 id="confpapers">Other Projects</h2>
+            <div class="paper"><img class="paper" src="images/CULane.png" title="culane" />
+                <div> <strong>CULane Dataset</strong><br />
+                    <br>
+                    CULane is a large scale challenging dataset for academic research on traffic lane detection.
+                    <br>
+                    <a href='https://xingangpan.github.io/projects/CULane.html'>[Project Page]</a>
+                </div>
+                <div class="spanner"></div>
             </div>
         </div>
     </div>
@@ -742,13 +767,15 @@
     -->
 
     <div style="clear: both;">
-        <div class="section"><h2>Talks</h2>
+        <div class="section"><h2>Invited Talks</h2>
             <div class="paper">
                 <li>2017 @ JD.com: <a href=pdf/talk-jd-2017.pdf>Mix-and-Match Tuning for Self-Supervised Semantic Segmentation</a></li>
                 <li>2019 @ HKSTP: <a href=pdf/talk-hkstp-2019.pdf>Self-Supervised Learning via Conditional Motion Propagation</a></li>
                 <li>2020 @ SenseTime TITAN Open Classes <a href='https://www.bilibili.com/video/av883608955/'>[Video Record]</a>: <a href=pdf/talk-st-2020.pdf>Self-Supervised Learning</a></li>
                 <li>2020 @ Tsinghua: <a href=pdf/talk-thu-2020.pdf>Exploiting Unlabeled Data in Computer Vision</a></li>
                 <li>2020 @ Zhidongxi Open Classes <a href='https://course.zhidx.com/c/Yjk1ZjYxMmI2NjIyNTg1YmY2MDM='>[Video Record]</a>: <a href=pdf/talk-zhidongxi-2020.pdf>Understanding and Practice of OpenSelfSup: an Open-source Library for Self-Supervised Learning</a></li>
+                <li>2021 @ TechBeat <a href='https://www.techbeat.net/talk-info?id=558'>[Video Record]</a>: Occlusion Problems in Natural Scenes</li>
+                <li>2022 @ Huawei Developer Conference <a href='https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892'>[Video Record]</a>: 3D Creation Pipeline Upgraded, Anything Can Be Animated</li>
             </div>
             <div class="spanner"></div>
         </div>
@@ -759,9 +786,8 @@
     <div style="clear: both;">
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
-                <li>Top 100 Chinese New Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
+                <li>Top 100 Chinese Rising Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
                 <li>Huawei Genius Youth Program, 2020</li>
-                <li>Top 3 Chinese students in CVPR 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
                 <li>Outstanding Undergraduates Award of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
@@ -769,7 +795,7 @@
                 <li>National Scholarship, 2014, Ministry of Education of China</li>
                 <li>Technological Innovation Scholarship, 2014, 2015, Tsinghua University</li>
                 <li>First class Academic Scholarship, 2013, 2014, Tsinghua University</li>
-                <li>Special class Integrated Excellence Scholarship, 2013, Tsinghua University</li>
+                <li>FastGear Special class Integrated Excellence Scholarship, 2013, Tsinghua University</li>
                 <li>“Spark” Innovative Talent Cultivation Program for Students of Tsinghua University (50 out of about 3500)</li>
             </div>
         </div>
