--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
                     <br>
                     <font color="gray">Dec 2017 - April 2018, Mar 2016 - Oct 2016. <br />
                         Research Intern.<br />
+                        Research on large-scale clustering and semi-supervised learning for face recognition. <br />
+                        Research on lane detection for autonomous driving. 
                     </font>
                     <br>
                 </div>
@@ -282,7 +284,7 @@
                     <br>
                     <font color="gray">Oct 2016 - Aug 2017, July 2015 - Sept 2015. <br />
                         Junior Research Assistant.<br />
-                        Research on large-scale clustering and semi-supervised learning for face recognition. Research on lane detection for autonomous driving. 
+                        Research on self-supervised learning and optical flow estimation.
                     </font>
                     <br>
                 </div>
