--- a/index.html
+++ b/index.html
@@ -203,10 +203,11 @@
                 Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent. 
                 Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
                 Afterwards, he joined Huawei via <a href="https://career.huawei.com/reccampportal/portal5/topminds.html">Huawei Genius Youth Program</a> (2020). 
-                His research interests include representation learning from 2016, and content generation from 2020. 
                 He is the reviewer of most top conferences and journals in AI&CV. 
                 He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
-                Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project.
+            </br>
+                About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.
+                <!-- Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project. -->
                 
                 <!-- My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020. -->
             </div>
@@ -258,7 +259,7 @@
                 <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
                     <br>
                     <font color="gray">August 2020 - March 2023. <br />
-                        Huawei Assistant Scientist, Tech Leader.<br />
+                        Huawei Assistant Scientist, Tech Leader, Huawei Genius Youth.<br />
                         Research in 3D avatars, including parametric modeling, bone rigging, motion synthesis, and technology transfer to Cloud products.<br />
                     </font>
                     <br>
@@ -332,7 +333,7 @@
 
         <!-- * Projects in Tencent are undisclosed. -->
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
-            <div> <strong>HMS Auto-Rigging Solution for Biped Characters @Huawei 2021-2022</strong><br />
+            <div> <strong>Data-Efficient Auto-Rigging Solution for Biped Characters @Huawei 2021-2022</strong><br />
                 <br>
                 Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, surpassing Mixamo and other academic work.<br />
                 Related products: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
@@ -534,6 +535,7 @@
                         <br>
                         <a href='https://arxiv.org/abs/2303.12564'>[Paper]</a>
                         <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/'>[Project Page]</a>
+                        <a href='https://github.com/zhongjinluo/RaBit'>[Code]</a>
                         <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/dataset.html'>[Dataset]</a>
                     </div>
                     <div class="spanner"></div>
@@ -548,6 +550,7 @@
                         <br>
                         <a href='https://arxiv.org/abs/2206.07706'>[Paper]</a>
                         <a href='https://www.mmlab-ntu.com/project/mfm/'>[Project Page]</a>
+                        <a href='https://github.com/Jiahao000/MFM'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -789,7 +792,7 @@
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
                 <li>Top 100 Chinese Rising Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
-                <li>Huawei Genius Youth Program, 2020</li>
+                <li>Huawei Genius Youth Program (华为天才少年计划), 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
                 <li>Outstanding Undergraduates Award of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
