--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
                 He is the reviewer of most top conferences and journals in AI&CV. 
                 He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
             </br>
-                About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.
+                About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.</br>
+            </br>
+                <font color="red"><strong>I am open for a new career! Please contact me via email.</strong></font>
+
                 <!-- Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project. -->
                 
                 <!-- My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020. -->
