--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
     <div style="clear: both;">
         <div class="section">
-            <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>) (<a href='https://www.linkedin.com/in/xiaohang-zhan%EF%BC%88%E8%A9%B9%E6%99%93%E8%88%AA%EF%BC%89-7659b2b8/?originalSubdomain=cn'>LinkedIn</a>)</h2>
+            <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>) (<a href='https://www.linkedin.com/in/xiaohang-zhan-7659b2b8/'>LinkedIn</a>)</h2>
             <div class="paper">
                 <!-- I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. -->
                 <!-- Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016. -->
