--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="paper" id="arxiv"><img class="paper" src="images/huawei-rigging.png" title="huawei-rigging" />
             <div> <strong>Data-Efficient Auto-Rigging Solution for Biped Characters @Huawei 2021-2022</strong><br />
                 <br>
-                Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency, surpassing Mixamo and other academic work.<br />
+                Achievements: robust results for variance in shape, pose and mesh topology, industry-leading accuracy and efficiency.<br />
                 Related products: <a href="https://developer.huawei.com/consumer/cn/doc/graphics-Guides/auto-rigging-0000001272237232">HMS Core</a>.<br />
                 Publicity: <a href="https://developer.huawei.com/consumer/en/training/course/live/C101667029313149892">Huawei Developer Conference 2022 (start from 1:01:00)</a>,
                            <a href="https://www.bilibili.com/video/BV1vP411L7ga/?vd_source=c0d0c6d3dd06dd38049f3b95ada3e3d3">Bilibili</a>. <br />
@@ -451,7 +451,7 @@
                 </div>
 
                 <div class="paper" id="CVPR2019"><img class="paper" src="images/cvpr19-cmp.png" title="cvpr19-cmp" />
-                    <div style="padding-top: 3.5%"> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
+                    <div> <strong>Self-Supervised Learning via Conditional Motion Propagation</strong><br />
                         <br>
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
@@ -529,7 +529,7 @@
                     <div class="spanner"></div>
                 </div> -->
 
-                <div class="paper" id="cvpr23"><img class="paper" src="images/rabit-cvpr23.png" title="rabit" />
+                <div class="paper" id="cvpr23"><img class="paper" src="images/cvpr23-rabit.png" title="rabit" />
                     <div> <strong>RaBit: Parametric Modeling of 3D Biped Cartoon Characters with a Topological-consistent Dataset</strong><br />
                         <br>
                         Zhongjin Luo*, Shengcai Cai*, Jinguo Dong, Ruibo Ming, Liangdong Qiu, <strong>Xiaohang Zhan</strong>, Xiaoguang Han
