--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </br>
                 About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.</br>
             </br>
-                <font color="red"><strong>I am open for a new career! Please contact me via email.</strong></font>
+                <font color="red"><strong>I am open for a new position! Please contact me via email.</strong></font>
 
                 <!-- Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project. -->
                 
