--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <!-- Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016. -->
                 Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent. 
                 Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
-                Afterwards, he joined Huawei via <a href="https://career.huawei.com/reccampportal/portal5/topminds.html">Huawei Genius Youth Program</a> (2020). 
+                Afterwards, he joined Huawei (2020) and then Tencent (2023).
                 He is the reviewer of most top conferences and journals in AI&CV. 
                 He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
             </br>
@@ -236,7 +236,7 @@
                     <br>
                     <font color="gray">August 2012 - July 2016. Bachelor.</font>
                     <br>
-                    <font color="gray">With "Outstanding Undergraduates Award" (top 1%).</font>
+                    <font color="gray">With "Outstanding Undergraduates Award" (top 1.8%).</font>
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -246,10 +246,10 @@
     <div style="clear: both;">
         <div class="section">
             <h2 id="work">Professional Experience</h2>
-            <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon.png" title="tencent" />
+            <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon1.jpeg" title="tencent" />
                 <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
-                    <font color="gray">March 2023 - Now. <br />
+                    <font color="gray">Mar 2023 - Now. <br />
                         Senior Research Scientist, Tech Leader.<br />
                         Research in 2D/3D/4D contents generation, and technology transfer to products in game industry and
                         social media.<br />
@@ -258,12 +258,12 @@
                 <div class="spanner"></div>
             </div>
 
-            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
+            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon1.png" title="huawei" />
                 <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
                     <br>
-                    <font color="gray">August 2020 - March 2023. <br />
-                        Huawei Assistant Scientist, Tech Leader, Huawei Genius Youth.<br />
-                        Research in 3D avatars, including parametric modeling, bone rigging, motion synthesis, and technology transfer to Cloud products.<br />
+                    <font color="gray">Aug 2020 - Feb 2023. <br />
+                        Research Scientist.<br />
+                        Research in 3D avatars, including parametric modeling, bone rigging, motion synthesis.<br />
                     </font>
                     <br>
                 </div>
