--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
                     <font color="gray">Mar 2023 - Now. <br />
-                        Senior Research Scientist, Tech Leader.<br />
+                        Senior Research Scientist.<br />
                         Research in 3D contents generation, and technology transfer to products in game industry and
                         social media.<br />
                     </font>
@@ -270,7 +270,7 @@
                 <div class="spanner"></div>
             </div>
 
-            <div class="edu" id="sensetime"><img class="icon" src="icons/sensetime_icon.png" title="sensetime" />
+            <!-- <div class="edu" id="sensetime"><img class="icon" src="icons/sensetime_icon.png" title="sensetime" />
                 <div> <font size="20"><strong>SenseTime</strong></font><br />
                     <br>
                     <font color="gray">Dec 2017 - April 2018, Mar 2016 - Oct 2016. <br />
@@ -293,7 +293,7 @@
                     <br>
                 </div>
                 <div class="spanner"></div>
-            </div>
+            </div> -->
 
         </div>
     </div>
