--- a/index.html
+++ b/index.html
@@ -496,11 +496,11 @@
             <h2 id="confpapers">Other Publications</h2>
 
                 <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-headevolver-s.png" title="headevolver" />
-                    <div> <strong>HeadEvolver: Text to Head Avatars via Locally Learnable Mesh Deformation</strong><br />
+                    <div> <strong>HeadEvolver: Text to Head Avatars via Expressive and Attribute-Preserving Mesh Deformation</strong><br />
                         <br>
-                        Duotun Wang*, Hengyu Meng*, Zeyu Cai*, Zhijing Shao, Qianxi Liu, Lin Wang, Mingming Fan, Ying Shan, <strong>Xiaohang Zhan</strong>, Zeyu Wang
+                        Duotun Wang*, Hengyu Meng*, Zeyu Cai*, Zhijing Shao, Qianxi Liu, Lin Wang, Mingming Fan, <strong>Xiaohang Zhan</strong>, Zeyu Wang
                         <br>
-                        <em>3DV 2025</em><br />
+                        <em>3DV 2025 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href="https://arxiv.org/abs/2403.09326">[Paper]</a>
                         <a href='https://www.duotun-wang.co.uk/HeadEvolver/'>[Project Page]</a>
